--- a/src/resources/css/rating.css
+++ b/src/resources/css/rating.css
@@ -9,12 +9,12 @@
     height:20px;
     background:linear-gradient(
         90deg,
-        #EB1C23 20%,
-        #FF7B00 45%,
-        #F4BB00 65%,
-        #C0CC00 70%,
-        #5CB400 80%,
-        #009E9E 90%
+        #EB1C23 14.29%,
+        #FF7B00 28.57%,
+        #F4BB00 42.86%,
+        #5CB400 57.14%,
+        #009E9E 71.43%,
+        #374DF5 85.71%
     );
     background-color: transparent;
     border: solid 1px #fff;
@@ -35,12 +35,12 @@
     height:20px;
     background:linear-gradient(
         90deg,
-        #EB1C23 20%,
-        #FF7B00 45%,
-        #F4BB00 65%,
-        #C0CC00 70%,
-        #5CB400 80%,
-        #009E9E 90%
+        #EB1C23 14.29%,
+        #FF7B00 28.57%,
+        #F4BB00 42.86%,
+        #5CB400 57.14%,
+        #009E9E 71.43%,
+        #374DF5 85.71%
     );
     background-color: transparent;
     border: solid 1px #fff;
